--- a/TODO
+++ b/TODO
@@ -9,5 +9,6 @@ possibly I can find the "active" quest and see if it's completed
     this does not show completed quests
 
 
-automatically discover instance ids
-not sure I can discover the *size* though
+group raid finder wings by dungeon
+blizz code does this by looking at the map name
+https://github.com/tomrus88/BlizzardInterfaceCode/blob/2663abbc70d6fcbacb33d5ab542ad7b6f1fc2306/Interface/FrameXML/RaidFinder.lua#L189
