Request shortage information from the server

--- a/TODO
+++ b/TODO
@@ -6,5 +6,4 @@ https://github.com/tomrus88/BlizzardInterfaceCode/blob/2663abbc70d6fcbacb33d5ab5
 pull stuff out into functions
 
 
-there still may be some call I need to update the lfg shortages
-check lfd code again
+test world boss code next tuesday
