List all epic world quests
even if world boss is killed

--- a/TODO
+++ b/TODO
@@ -7,3 +7,10 @@ pull stuff out into functions
 
 
 test world boss code next tuesday
+
+
+unkilled world boss didn't work until I opened the map
+did I really fix this?
+but it did work on another character
+note the first time I was in mardum - not technically broken isles (?)
+maybe just add a note
